--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,47 @@
 .App {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  min-width: 1200px;
+  height: 100vh;
+}
+
+.chat-room {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-width: 1200px;
+  height: 100vh;
+}
+.chat-room .chat-list {
+  border: solid black 2px;
+  width: 400px;
+  height: 500px;
+  box-sizing: border-box;
+  overflow: scroll;
+}
+
+.chat-room .chat-list .chat-elem {
+  width: 400px;
+  height: 100px;
+  box-sizing: border-box;
+}
+input {
+  width: 400px;
+  height: 50px;
+  box-sizing: border-box;
+}
+.chat-room .input-container {
+  width: 400px;
+}
+button {
+  width: 400px;
+  height: 100px;
+  font-size: 20px;
 }
 
 .App-logo {
